--- a/public/views/join.html
+++ b/public/views/join.html
@@ -4,9 +4,8 @@
   <head>
     <title>Ajax</title>
     <meta charset="utf-8"/>
-    <style type="text/css">
-
-    </style>
+    <link rel="stylesheet" href="/views/account.css">
+    <link rel="icon" type="image/png" href="/views/PNG/AS.png">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
 
