--- a/public/views/join.html
+++ b/public/views/join.html
@@ -34,8 +34,6 @@
       <!--  <h2>JOIN LIST</h2> -->
         <ul id='messages'></ul>
 </div>
-
-
-
+	<script src="js/join.js"></script>
   </body>
 </html>
