--- a/public/views/join.html
+++ b/public/views/join.html
@@ -4,7 +4,7 @@
   <head>
     <title>JOIN</title>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" href="/views/create.css">
+    <link rel="stylesheet" href="/views/join.css">
     <link rel="icon" type="image/png" href="/views/PNG/AS.png">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
@@ -31,12 +31,10 @@
   </header>
   <br>
   <p id = "noGame" hidden> NO ACTIVE GAMES </p>
-  <div id = "games">
+  <div id = "allGames" style = "left: 50%">
 
-
+    
   </div>
-      <!--  <h2>JOIN LIST</h2> -->
-        <ul id='messages'></ul>
 </div>
 	<script src="js/join.js"></script>
   </body>
