--- a/public/views/altPlayer.css
+++ b/public/views/altPlayer.css
@@ -50,9 +50,9 @@ div {
 }
 
 section{
-    position: fixed;
-    top: 10px;
-    right: 5px;
+     position: absolute;
+    top: 0;
+    right: 0;
     border:#cc0000 5px outset;
     color:whitesmoke;
     float: left;
